Feat/auth (#2)
