# src/dto/auth/signUp.dto.ts
@@ -1,0 +1,7 @@
+import { components } from "../../types/api-contract";
+
+export type ManualSignUpRequestDTO = components['schemas']['ManualSignUpRequest'];
+
+export type ResponseMessageDTO = components['schemas']['ResponseMessage'];
+
+export type ErrorResponseDTO = components['schemas']['ErrorResponseSchema'];
